Updated manuscript before Manu-Bram review

--- a/text/main.tex
+++ b/text/main.tex
@@ -3,7 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel} 
 \usepackage{lineno, a4wide} % add line numbers
-%\linenumbers
+\linenumbers
 \usepackage{setspace} % to use double spacing
 \doublespacing
 
@@ -95,8 +95,6 @@ Human-induced land cover modifications and infrastructure from industrial develo
 
 Anthropogenic infrastructure have direct consequences in the area where they are built (e.g. road kills and habitat modification from road building), but they might also indirectly affect species and ecological processes up to several kilometers from the infrastructure locations \citep{johnson_cumulative_2005,torres_assessing_2016}, e.g. by creating avoidance and reducing the probability of animal occurrence \citep{trombulak_review_2000,harris_grappling_2011}. Therefore, two key factors to be assessed in cumulative impact studies are the magnitude of the impact from infrastructure and the scale or area where this impact is present \citep[Box 1; ][]{naugle_unifying_2011}. Understanding the \textit{effect size} or \textit{magnitude of the impact} is generally the core of most research focused on impacts and is tackled by estimating which factors influence focal organisms and processes and how strongly they are affected, generally through a combination of biological and environmental data and statistical modeling [Box 1; REF]. The spatiotemporal \textit{scale} or \textit{zone} of influence (ZoI) is intrinsically related to the magnitude of the impacts and corresponds to the area (and sometimes the period) within which there are detectable impacts from different landscape modifications on the process of interest, but is commonly expressed in terms of distances --- the distance from or radius around the disturbance sources which defines the affected area \citep[Box 1; ][]{polfus_identifying_2011, boulanger_estimating_2012}. Most environmental impact assessment studies still focus on single projects at small spatiotemporal scales, and even ecological studies conducted at larger extents hardly account explicitly for cumulative effects of multiple infrastructure at multiple scales, when estimating the magnitude and ZoI of anthropogenic effects on biodiversity \citep{johnson_regulating_2011, mcgarigal_multi-scale_2016}. 
 
-%The term ``scale" has been used in multiple contexts in ecology (e.g. scale as landscape grain and extent; spatial and temporal scales and the scale of ecological organization; \citealt{wiens_spatial_1989}; scale or level of animal habitat selection; \citealt{lima_towards_1996}) and has led to important advances in ecological theory \citep{fahrig_effects_2003, mcgarigal_multi-scale_2016}. However, to avoid misunderstandings with the nomenclature, here we use the term Zone of Influence (ZoI) to refer to the area or distance from infrastructure where there is any effect on biodiversity \citep{naugle_unifying_2011}.
-
 Infrastructure and disturbance impacts can accumulate at least over time and space, as a result of the sum or interaction of the impacts of different types of infrastructure or multiple features of same-type infrastructure \citep{wolfe_response_2000}. The consequences of multiple types of infrastructure are generally included in ecological models by careful evaluation of their correlations \citep{dormann_collinearity_2013} and subsequently through the inclusion of additive or interactive terms in statistical model specification, to control for their mutual potential influence on the studied system [REF]. This allows one to estimate the coefficients that represent the magnitude of the impact for each infrastructure or their combination. Alternatively, other studies combine multiple disturbances in a single measure of cumulative effect before fitting statistical models \citep{polfus_identifying_2011, venter_sixteen_2016, tucker_moving_2018}. As for the influence of multiple infrastructure of the same type, most commonly they are either considered by changing the variable's level of spatial organization (e.g. urban areas or wind parks instead of a combination of buildings and turbines, respectively) or ignored by considering only the effect of the nearest infrastructure feature \citep[e.g.][]{torres_assessing_2016}. 
 
 The determination of the ZoI for multiple infrastructure is intrinsically related to the magnitude of the impacts, even though it is not always present on impact studies, maybe because of the challanges involved in the task  \citep{quinonezpinon_design_2007}. When estimating the ZoI, the concept of ecological threshold \citep{huggett_concept_2005} and analytical procedures developed therein are commonly used \citep{ficetola_ecological_2009}. Under this framework, the estimation of the zones of influence is often carried out by fitting piece-wise regression or other non-linear regression models \citep[such as an exponential decay or generalized additive models;][]{skarin_out_2018, ficetola_ecological_2009} to the measured response of an ecosystem to an infrastructure as a function of distance. This distance is typically the distance to the nearest instance of this infrastructure type, ignoring potential additive or cumulative effects of multiple instances or features of an infrastructure \citep[e.g ][Box 1]{torres_assessing_2016}. Besides, this approach is generally limited to the assessment of thresholds for only one or a few types of infrastructure \citep[e.g.][]{boulanger_estimating_2012}, since its computation requires repeated fitting and might become impracticable for a large number of factors \citep{lee_estimating_2020}. 
@@ -105,7 +103,6 @@ Another approach to estimate the ZoI may be found under the umbrella of the disc
 \todo[inline]{I need to review this paragraphs later to make sure the idea of ``scale" is not confusing. Maybe replace by more precise terms, when possible.}
 
 Building upon this literature, we propose an approach to estimate the magnitude and the ZoI of the impacts of multiple features of an infrastructure and test if they accumulate. First, we derive the estimation methods based on either the influence from the nearest feature only or the cumulative influence of multiple features (Box 1, Fig. \ref{fig:zoi_conceptual}), using habitat selection analyses as an example. Second, we perform simulations to distinguish in which scenarios these two measures of influence represent similar or different spatial gradients, to understand how the spatial configuration of landscape modification might lead to higher expected cumulative impacts. 
-%We also estimate how the area affected (Box 1) increases as the impacts of multiple infrastructure accumulate over these different scenarios. 
 Finally, we illustrate our approach by assessing the cumulative effects on the space use of the tundra's flagship species, the mountain reindeer (\textit{Rangifer tarandus tarandus}). We also provide tools to allow an easy implementation of the cumulative approach presented here in R \citep{r_core_team_r_2020} and GRASS GIS \citep{grass_development_team_geographic_2017} through the \verb|oneimpact| R package. Even though our examples focus on animal space use, we believe this approach is relevant for ecological studies and impact assessments over several fields, from genetics to organisms to populations and communities.
 
 \begin{tcolorbox}[width=1.3\textwidth,center,colback=yellow!5,colframe=yellow!75!black,title={Box 1 -- Definitions}]
@@ -118,8 +115,7 @@ Finally, we illustrate our approach by assessing the cumulative effects on the s
     
     \item[Magnitude of the impact] The magnitude of the impact describes how strong is the effect pf a variable over a given biological response, and is described here by the model coefficients ($\beta$'s in eq. \ref{eqn:HSF}). 
     
-    \item[Influence] The term \textbf{influence} is used here in a pragmatic way and represents the function $\phi$ that sets how the impacts of an infrastructure feature change with the distance to such feature, and is the basis for defining the zone of influence
-    %and area affected by the infrastructure, for a given biological response. 
+    \item[Influence] The term \textbf{influence} is used here in a pragmatic way and represents the function $\phi$ that sets how the impacts of an infrastructure feature change with the distance to such feature, and is the basis for defining the zone of influence.
     The influence of a feature might follow different \textbf{influence functions} (also called weighting functions, smoothing filters, or decay functions). It can be constant up to a given threshold distance or decrease in different ways with increasing distance from it (Fig. \ref{fig:zoi_conceptual}A). When multiple features of an infrastructure are present, one can assume that either only the nearest features influence the response (eq. \ref{eqn:HSFnearest}) or that the influence of multiple features accumulate (eq. \ref{eqn:HSFcuminf}, Fig. \ref{fig:zoi_conceptual}B).
     
     \item[Zone of Influence] The \textbf{zone of influence} or \textbf{ZoI} is the maximum distance from an infrastructure feature where it influences or affects a given biological response. For non-vanishing functions (e.g. exponential, Gaussian), a threshold must be set to define the ZoI -- e.g. the distance at which the influence function goes below 0.05 or 0.01. 
@@ -187,27 +183,6 @@ the ``density" of features in space \citep[e.g.][]{panzacchi_searching_2015}. Th
 
 Analogous to \citet{lee_estimating_2020}'s recasting of the identification of the ZoI of a single (i.e. the nearest) infrastructure as a model selection rather than a parameterization problem, with this definition we can also estimate the cumulative effect size and the ZoI of features using model selection, which allows the process to be performed for different types of infrastructure. Beyond that, this formulation makes it possible to test for the presence of cumulative impacts of anthropogenic landscape changes by comparing models with either of the two influence measures (eq. \ref{eqn:HSFnearest} and \ref{eqn:HSFcuminf}), both based on the same decay function.
 
-%Finally, we can move beyond the identification of the distance under influence around infrastructure (the ZoI) and define the area affected, which is the area within the ZoI of all infrastructure in the landscape combined (Box 1). For this purpose, we define a $\phi_{limit}$, the threshold above which we consider there is impact of infrastructure -- the same used to define the ZoI for non-vanishing function (e.g. Gaussian). Given this, the area affect $A_k$ by all infrastructure of type $k$ in a landscape is given by:
-
-%\begin{equation}
-%\label{eqn:area_affected}
-%    A_k = \iint_\Omega \Phi_{k}(x,y) \,dx\,dy
-%\end{equation}
-
-%where 
-
-%\begin{equation}
-%\label{eqn:area_affected2}
-%\begin{split}
-%    \Phi_k = \begin{cases}
-%    1 & \text{if $\phi_k >\phi_{limit}$} \\
-%    0 & \text{otherwise}
-%    \end{cases}
-%\end{split}
-%\end{equation}
-
-%and $\Omega$ is the area of the whole landscape. Here we use $\phi_{limit} = 0.05$. As we show in the next section, the area affected depends on whether a landscape presents a few or many features of an infrastructure and on their spatial distribution, as well as on whether the influence of the nearest feature or the cumulative influence are considered.
-
 \section{When do the influence of the nearest feature and the cumulative influence diverge?}
 
 Whether the spatial variation represented by the cumulative influence of multiple features of an infrastructure is similar or not to the influence of the nearest feature depends on the spatial distribution of the infrastructure as well as its zone of influence. To illustrate when they converge and diverge, we simulated $30 \times 30$ km landscapes with a constant number of point features (e.g. houses, cabins, turbines; $n = 100$) distributed following different spatial patterns, in a gradient of clustering, from regular and random to clustered (Fig. \ref{fig:simulated_landscapes}; Appendix B). For each scenario we calculated the two measures of influence (nearest feature, $\phi_{nearest}$, and cumulative, $\phi_{cum}$) for a range of values of ZoI (from 20 m to 12 km), using a linear decay function \citep[Fig. \ref{fig:zoi_conceptual}; ``Bartlett" or tent-shaped decay;][]{harris_use_1978}, for which the ZoI is easily defined as the distance at which the function decreases to zero. We then compared the resulting influence spatial patterns through Pearson correlation of the values of the two measures at the same coordinates (see details in the Appendix B). 
@@ -218,13 +193,8 @@ Whether the spatial variation represented by the cumulative influence of multipl
 \caption{\label{fig:simulated_landscapes} Representation of the influence of nearest feature ($\phi_{nearest}$) and the cumulative influence ($\phi_{cum}$) in landscapes with point infrastructure spatially distributed in a gradient of clustering, from (A) a regular distribution (e.g. a large solar power plant in a flat area) to (B) a set of clusters (e.g. a wind industrial area formed by wind turbines built in the mountain tops) to (C) only one cluster (e.g. isolated village or urban center). The central panel shows  a visual comparison between the influence of the nearest feature (left) and the cumulative influence (right) between simulated landscapes following each of those patterns when $ZoI = 0.1 \cdot \text{landscape extent}$ (higher than the average distance between infrastructure features, see Appendix B). The lower panel shows the correlation between the influence of the nearest feature and cumulative influence in each scenario, as their ZoI increases. The dashed vertical lines show half the the minimum distance between features (black), beyond which there are cumulative effects of the different infrastructure, and the size of the feature clusters (grey), beyond which the correlation stops decreasing.}
 \end{figure}
 
-%The correlation between the influence measures was generally higher for clumped distribution of features than for regularly or randomly distributed points. 
 When $ZoI/2$ is smaller than minimum distance between features, both measures of influence are similar and their correlation is maximum (Fig. \ref{fig:simulated_landscapes}; $\text{correlation} = 1$ for all ZoI values below the black dashed vertical line). This happens because the ZoI of each feature is not large enough to interact with each other. As the ZoI increases, the effect of nearby features starts to sum and the two measures of influence begin to represent different patterns of spatial variation. This is valid for scenarios with random, regular, and slightly clustered distributions of infrastructure features (Fig. \ref{fig:simulated_landscapes}A,B, Fig BXX in Appendix B). In contrast, as the distribution of features gets more clumped and distributed in smaller clusters (up to a limit with a single small cluster, Fig. \ref{fig:simulated_landscapes}C), the correlation between the influence measures goes through a point of inflection as the ZoI increases, beyond which it increases with ZoI (Fig. BYY in Appendix B). The point where the correlation between the influence measures stop decreasing is defined by the size of the clusters (grey dashed vertical line in Figs. \ref{fig:simulated_landscapes}B,C). For ZoI values larger than the cluster size, the two influence measures start to converge again. That is the point beyond which it might get harder to distinguish between the effect of each feature alone, regardless of the influence measure, and the effect of a collection of features transforms into that of a ``super-feature" (e.g. a group of houses or wind turbines behave as an urban area or a wind park, respectively). 
 Overall, the correlation between the influence measures was high between scenarios. In some empirical cases it might be difficult to distinguish whether the impacts of a given infrastructure type accumulate or not. However, in other cases (such as the correlation inflection point mentioned above) it might be easier to detect differences and test for cumulative effects.
-
-% Since a great part of the literature uses as measure of infrastructure influence transformations of the Euclidean distance from the nearest feature, such as the logarithm or the scales distance, we also calculated the logarithm of the Euclidean distance to the nearest feature to compare with the cumulative influence.
-
- %Here we simulated landscapes with point infrastructure because of the simplicity to represent them and place them following different patterns. We believe these simple cases might also provide insights on when $\phi_{nearest}$ and $\phi_{cum}$ are similar for other types of infrastructure, for instance linear infrastructure (e.g. roads, railways, and power lines) and higher dimensional landscape changes defined by polygons and areas (e.g. dams, mining or forestry areas, and deforestation sites). However, we recognize that those patterns can get more complex as these structures and spatial patterns extend over large distances and areas, and a further assessment of when these influence measures converge might be needed. \todo{better to place this paragraph in the discussion?}
 
 \section{Empirical demonstration: cumulative influence of infrastructure on reindeer space use}
 
@@ -232,7 +202,7 @@ Overall, the correlation between the influence measures was high between scenari
 
 In our empirical demonstration we aimed to assess if and how the impacts of multiple infrastructure affect mountain reindeer space use during summer in Southern Norway. Wild reindeer are highly sensible to human activity, and the populations in Norway are the last remaining ones of this species in Europe. We used GPS tracking data from the Hardangervidda reindeer population, the largest population of wild mountain reindeer (Fig. \ref{fig:prediction_maps}). During summer, the area is mostly used for tourism. It has 14,154 private cottages, 26 large tourist cabins, and hundreds of kilometers of trails, besides roads and small tourist cabins (Fig. C2). We used data from 48 (??) female reindeer collected between 2001 and 2010 \citep[see][for further details]{panzacchi_searching_2015} and selected July as a month representative of the summer. To assess reindeer habitat selection using a use-availability setup, each used GPS point was compared against 9 available locations created at random within the area occupied by the population (Fig. \ref{fig:prediction_maps}) and annotated with environmental covariates.
 
-To account for bio-climatic-geographical variation in environmental characteristics we used the four first components from a large principal component (PC) analysis conducted for Norway \citep{bakkestuen_step-less_2008}, which correspond to gradients of (1) PC1 - continentality, (2) PC2 - altitude, (3) PC3 - terrain ruggedness, and (4) PC4 - solar radiation. We included a quadratic term for PC1 and PC2 to account for non-linear responses \citep{panzacchi_searching_2015}. We also used the NORUT land cover map with 25 vegetation classes, which we further grouped \citep[see Table C2][]{johansen_vegetasjonskart_2009}. Because of correlations among covariates, and to keep model fitting relatively simple, we included two anthropogenic variables: private cottages and large tourist cabins, for which we estimated the cumulative impacts.
+To account for bio-climatic-geographical variation in environmental characteristics we used the four first components from a large principal component (PC) analysis conducted for Norway \citep{bakkestuen_step-less_2008}, which correspond to gradients of (1) PC1 - continentality, (2) PC2 - altitude, (3) PC3 - terrain ruggedness, and (4) PC4 - solar radiation. We included a quadratic term for PC1 and PC2 to account for non-linear responses \citep{panzacchi_searching_2015}. We also used the NORUT land cover map with 25 vegetation classes, which we further grouped \citep[see Table C2][]{johansen_vegetasjonskart_2009}. Because of correlations among covariates, and to keep model fitting relatively simple, we included three [two?] anthropogenic variables: private cottages, large tourist cabins, and trails, for which we estimated the cumulative impacts.
 
 For each infrastructure type we calculated the influence measures for 8 different ZoI: 100, 250, 500, 1000, 2500, 5000, 10000, and 20000 m. For each ZoI, we used four influence functions, to account for different shapes of the variation of the infrastructure influence within the ZoI (Fig.~\ref{fig:zoi_conceptual}A): threshold, linear decay, Gaussian decay, and exponential decay, and made two assumptions for the impact of additional features, leading to the measures of influence from the nearest feature ($\phi_{nearest}$, eq. \ref{eqn:HSFnearest}) and cumulative influence ($\phi_{cum}$, eq. \ref{eqn:HSFcuminf}; see Fig.~\ref{fig:zoi_conceptual}B). We then fitted HSFs (eq. \ref{eqn:HSF}) combining the effects of infrastructure, land cover, and bio-climatic data using the function \verb|coxph| from the \verb|survival| package in R \citep{therneau_package_2020, therneau_modeling_2000}. 
 
@@ -287,28 +257,9 @@ Furthermore, the \verb|oneimpact| package allows the calculation of the influenc
 
 \section{Discussion}
 
-There is an urge to evaluate, debate, and inform scientists, decision-makers, and the public 
-in general about the past, current, and future effects of global infrastructure on biodiversity
-\citep{laurance_conservation_2018}. Most of the decisions and regulations made for infrastructure
-projects are performed with little knowledge about the multiple potential impacts on the ecosystems
-where they are built and the species living therein. Even when environmental impact assessments are
-well conducted, they hardly estimate the cumulative effects of those infrastructure with
-pre-existing ones or with other development projects planned for the same region
-\citep{laurance_roads_2017, krausman_cumulative_2011}. In great part, this happens 
-because current approaches and tools still lack in their ability to incorporate 
-cumulative impacts \citep[but see][for recent advances]{gillingham_integration_2016}. 
-Building upon previous frameworks to understand cumulative impacts \citep{naugle_unifying_2011} 
-and by adapting concepts and tools from the landscape ecology literature into the nearest 
-and cumulative influence measures, here we gave a step further in developing a clear way to 
-assess cumulative effects and impacts of infrastructure on biodiversity. 
-The approach proposed here allows one to: (i) quantify the cumulative impact of 
-multiple infrastructure of the same type; (ii) test whether there are cumulative 
-impacts for each type of infrastructure, by comparing the influence of the nearest 
-feature and the cumulative influence as predictors of biological responses, within 
-ecological models; and (iii) estimate the zone of influence for multiple types of 
-infrastructure. Here we depicted scenarios where each of the influence measures 
-might converge or diverge, presented a case study to illustrate it, and offered tools 
-to allow their application in ecological studies and environmental impact assessments.
+There is an urge to evaluate, debate, and inform scientists, decision-makers, and the public in general about the past, current, and future effects of global infrastructure on biodiversity \citep{laurance_conservation_2018}. Most of the decisions and regulations made for infrastructure projects are performed with little knowledge about the multiple potential impacts on the ecosystems where they are built and the species living therein. Even when environmental impact assessments are well conducted, they hardly estimate the cumulative effects of those infrastructure with pre-existing ones or with other development projects planned for the same region \citep{laurance_roads_2017, krausman_cumulative_2011}. In great part, this happens because current approaches and tools still lack in their ability to incorporate cumulative impacts \citep[but see][for recent advances]{gillingham_integration_2016}. Building upon previous frameworks to understand cumulative impacts \citep{naugle_unifying_2011} and by adapting concepts and tools from the landscape ecology literature into the nearest and cumulative influence measures, here we gave a step further in developing a clear way to assess cumulative effects and impacts of infrastructure on biodiversity. The approach proposed here allows one to: (i) quantify the cumulative impact of multiple infrastructure of the same type; (ii) test whether there are cumulative impacts for each type of infrastructure, by comparing the influence of the nearest feature and the cumulative influence as predictors of biological responses, within ecological models; and (iii) estimate the zone 
+%and area 
+of influence for multiple types of infrastructure. Here we depicted scenarios where each of the influence measures might converge or diverge, presented a case study to illustrate it, and offered tools to allow their application in ecological studies and environmental impact assessments.
 
 The formulation of the influence of the nearest feature (eq. \ref{eqn:HSFnearest}) and the cumulative influence (eq. \ref{eqn:HSFcuminf}) as presented here makes it possible to compare whether there are cumulative effects of an infrastructure by comparing models with either of the influence measures, for instance through model fit estimates or variable selection (e.g. AIC or $R^2$; \citealt{jackson_are_2015, huais_multifit_2018}). It also raises the possibility of finding the ZoI (or scale of effect, \textit{sensu} \citealt{jackson_are_2015}) and the shape of decay of the influence with distance \citep[e.g. threshold or exponential decay, as in ][]{miguet_how_2017} only through model selection, without the necessity of performing complex parametrization of non-linear functions for multiple variables \citep{lee_estimating_2020}. In great part, this is feasible because the computation of these predictor variables might be performed before model fitting. 
 Even though our current formulation (eq. \ref{eqn:HSFcuminf}) is maybe the simplest form of accounting for cumulative effects, more complex formats might be chosen, based on eq. \ref{eqn:HSFterm}, by changing the assumptions on the values of the effect sizes ($\beta's$) of each feature or the function shape of the decayment influence curves \citep{miguet_how_2017}. Yet, we believe out approach might be very useful in ecological studies.
@@ -318,6 +269,8 @@ To understand in which cases it might be more interesting to test for presence o
 In our empirical demonstration with mountain reindeer in Norway, we found a strong support for the hypothesis of cumulative impacts of private cottages and tourist resorts on the reindeer habitat selection, with large ZoI (up to 20 km). Quantifying the impacts based on their magnitude and influence function allows us to compare the effects of different types of infrastructure. While the impact of a single cottage is much smaller than that of a single tourist cabins, it can be much higher in areas where many private cottages are aggregated (Fig. \ref{fig:impact_plot} and \ref{fig:prediction_maps}, Appendix C). It is important to notice that, if different influence functions are found to affect the ecological response under study, this has important consequences for the interpretation of the ZoI and the area affected by the infrastructure. For instance, while we found a constant influence of private cabins in a ZoI of 10 km, for tourist cabins we found an exponential decay of the influence of these infrastructure as one gets far from them, which means not all 20 km around resorts are affected equally. In a similar setup while evaluating the effects of landscape variables on the abundance of bird and insect species, \citet{miguet_how_2017} showed that the area affected by the landscape variable can increase by a factor of up to 5.7 when one uses a distance-weighted influence measure (as the exponential and Gaussian ones presented here), in comparison to a threshold-based landscape measure. 
 We also found all models based on the influence of the nearest feature to perform much worse than the ones incorporating the cumulative influence of infrastructure. This includes the models based on the log-distance to the nearest feature, which is a common proxy for the effect of infrastructure and landscape variables in the ecological literature. This means that, researchers might have been ignoring 
 the possibility of cumulative impacts, what might limit our overall understanding of the impacts of landscape change on biodiversity.
+
+\citet{panzacchi_searching_2015} suggest several limitations in using single populations to estimate species niches and responses to infrastructure. For illustrative purposes, we used data from the wild reindeer population in Hardangervidda and included only two types of infrastructure. For more comprehensive analyses, we suggest that habitat selection models, ecological niche models, occupancy or other ecological models using this approach to consider biological data from different populations and areas, to include as much as possible variation on landscapes and allow the estimation of cumulative functional responses in impact assessment of infrastructure over ecological processes.  
 
 It is important to remark is that the extent of the study area and the scales or zones of influence to be tested must be carefully selected, especially in the context of cumulative impacts, when the interplay between multiple factors may produce complex setups. First, the effects of infrastructure on ecological processed might differ depending of the extent of the study area \citep{vistnes_matter_2008}. For instance, \cite{skarin_human_2014} showed that, depending of the temporal and spatial range of the study, the same type of infrastructure might vary in their effect to ecological variables, from no effect to positive or negative effects. As we show here, the spatial configuration of features and the ZoI might also affect our ability to detect if the impacts of infrastructure accumulate. Furthermore, the spatial pattern of features is also affected by the selection of extent of the landscape. As an example, if the biological response is measured and assessed in a study area that comprises 10 km around a wind farm, the distribution of wind turbines might look random or somehow aggregated. However, if the study area comprises a much bigger area and the biological response is expected to respond at larger extents, and the wind farm is only located in part of that, their distribution might appear very clumped. Second, the zones or scales of influence must be carefully selected. Depending on the biological response variable, the range of ZoI tested must encompass values much higher than the range size or even the average dispersal distance of an species \citep{jackson_what_2012,miguet_what_2016}. If the ZoI values are not properly defined, the ``true" scale at which the ecological process being measured is affected might not be selected, and the resulting estimated ZoI might be wrong and mislead decisions based on that \citep[e.g.][]{jackson_are_2015}.
 
